Add schema for items

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
       { "fileMatch": "/animations/*.json", "url": "./schemas/animation.json" },
       { "fileMatch": "/*.animation.json", "url": "./schemas/animation.json" },
       { "fileMatch": "/*.entity.json", "url": "./schemas/actor_resource_definition.json" },
-      { "fileMatch": "/attachables/*.json", "url": "./schemas/actor_resource_definition.json" }
+      { "fileMatch": "/attachables/*.json", "url": "./schemas/actor_resource_definition.json" },
+      { "fileMatch": "/items/*.json", "url": "./schemas/item.json" }
     ]
   },
   "scripts": {
