--- a/package.json
+++ b/package.json
@@ -36,19 +36,58 @@
   "main": "./out/extension.js",
   "contributes": {
     "jsonValidation": [
-      { "fileMatch": "/manifest.json", "url": "./schemas/manifest.json" },
-      { "fileMatch": "/animation_controllers/*.json", "url": "./schemas/animation_controller.json" },
-      { "fileMatch": "/*.animation_controllers.json", "url": "./schemas/animation_controller.json" },
-      { "fileMatch": "/render_controllers/*.json", "url": "./schemas/render_controller.json" },
-      { "fileMatch": "/*.render_controllers.json", "url": "./schemas/render_controller.json" },
-      { "fileMatch": "/mobs.json", "url": "./schemas/geometry.json" },
-      { "fileMatch": "/*.geo.json", "url": "./schemas/geometry.json" },
-      { "fileMatch": "/animations/*.json", "url": "./schemas/animation.json" },
-      { "fileMatch": "/*.animation.json", "url": "./schemas/animation.json" },
-      { "fileMatch": "/*.entity.json", "url": "./schemas/actor_resource_definition.json" },
-      { "fileMatch": "/attachables/*.json", "url": "./schemas/actor_resource_definition.json" },
-      { "fileMatch": "/items/*.json", "url": "./schemas/item.json" },
-      { "fileMatch": "/*.material", "url": "./schemas/materials.json" }
+      {
+        "fileMatch": "/manifest.json",
+        "url": "./schemas/manifest.json"
+      },
+      {
+        "fileMatch": "/animation_controllers/*.json",
+        "url": "./schemas/animation_controller.json"
+      },
+      {
+        "fileMatch": "/*.animation_controllers.json",
+        "url": "./schemas/animation_controller.json"
+      },
+      {
+        "fileMatch": "/render_controllers/*.json",
+        "url": "./schemas/render_controller.json"
+      },
+      {
+        "fileMatch": "/*.render_controllers.json",
+        "url": "./schemas/render_controller.json"
+      },
+      {
+        "fileMatch": "/mobs.json",
+        "url": "./schemas/geometry.json"
+      },
+      {
+        "fileMatch": "/*.geo.json",
+        "url": "./schemas/geometry.json"
+      },
+      {
+        "fileMatch": "/animations/*.json",
+        "url": "./schemas/animation.json"
+      },
+      {
+        "fileMatch": "/*.animation.json",
+        "url": "./schemas/animation.json"
+      },
+      {
+        "fileMatch": "/*.entity.json",
+        "url": "./schemas/actor_resource_definition.json"
+      },
+      {
+        "fileMatch": "/attachables/*.json",
+        "url": "./schemas/actor_resource_definition.json"
+      },
+      {
+        "fileMatch": "/items/*.json",
+        "url": "./schemas/item.json"
+      },
+      {
+        "fileMatch": "/*.material",
+        "url": "./schemas/materials.json"
+      }
     ]
   },
   "scripts": {
@@ -60,16 +99,16 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^12.12.21",
+    "@types/ini": "^1.3.30",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.0",
     "glob": "^7.1.6",
-    "mocha": "^6.2.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4",
+    "mocha": "^7.1.1",
+    "typescript": "^3.8.3",
     "vscode": "^1.1.36",
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
-    "jsonc-parser": "^2.2.0"
+    "jsonc-parser": "^2.2.1"
   }
 }
