--- a/package.json
+++ b/package.json
@@ -1,39 +1,68 @@
 {
-  "name": "vscode-bedrock-definitions",
-  "displayName": "Bedrock Definitions",
-  "description": "Go-to Bedrock definitions and auto-complete for Visual Studio Code",
-  "icon": "icon.png",
+  "name": "bedrock-studio",
   "version": "1.0.1",
-  "engines": {
-    "vscode": "^1.22.0"
+  "description": "Tools for making Minecraft Bedrock Add-Ons in Visual Studio Code",
+  "keywords": [
+    "Minecraft",
+    "Bedrock",
+    "Add-on",
+    "Addon"
+  ],
+  "homepage": "https://github.com/tschrock/bedrock-studio",
+  "bugs": {
+    "url": "https://github.com/tschrock/bedrock-studio/issues"
   },
+  "license": "MIT",
   "author": {
-    "name": "destruc7i0n",
-    "email": "destruc7i0n@thedestruc7i0n.ca"
+    "name": "CyberPon3",
+    "email": "cyber@code.horse"
   },
   "contributors": [
     {
-      "name": "CyberPon3",
-      "email": "cyber@code.horse"
+      "name": "destruc7i0n",
+      "email": "destruc7i0n@thedestruc7i0n.ca"
     }
   ],
+  "main": "./out/extension.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/destruc7i0n/vscode-bedrock-definitions"
+    "url": "https://github.com/tschrock/bedrock-studio"
   },
-  "license": "MIT",
-  "publisher": "destruc7i0n",
+  "scripts": {
+    "vscode:prepublish": "yarn run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "yarn run compile",
+    "test": "node ./out/test/runTest.js"
+  },
+  "dependencies": {
+    "jsonc-parser": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.1.1",
+    "@types/ini": "^1.3.30",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.0",
+    "glob": "^7.1.6",
+    "mocha": "^7.1.1",
+    "typescript": "^3.8.3",
+    "vscode": "^1.1.36",
+    "vscode-test": "^1.3.0"
+  },
+  "engines": {
+    "vscode": "^1.22.0"
+  },
+  "displayName": "Bedrock Studio",
+  "publisher": "tschrock",
   "categories": [
+    "Programming Languages",
     "Other"
   ],
-  "keywords": [
-    "Minecraft"
-  ],
-  "activationEvents": [
-    "onLanguage:json",
-    "onLanguage:jsonc"
-  ],
-  "main": "./out/extension.js",
+  "galleryBanner": {
+    "color": "#2e2e2e",
+    "theme": "dark"
+  },
+  "preview": false,
   "contributes": {
     "jsonValidation": [
       {
@@ -90,25 +119,14 @@
       }
     ]
   },
-  "scripts": {
-    "vscode:prepublish": "yarn run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile",
-    "test": "node ./out/test/runTest.js"
-  },
-  "devDependencies": {
-    "@types/glob": "^7.1.1",
-    "@types/ini": "^1.3.30",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.0",
-    "glob": "^7.1.6",
-    "mocha": "^7.1.1",
-    "typescript": "^3.8.3",
-    "vscode": "^1.1.36",
-    "vscode-test": "^1.3.0"
-  },
-  "dependencies": {
-    "jsonc-parser": "^2.2.1"
-  }
+  "activationEvents": [
+    "onLanguage:json",
+    "onLanguage:jsonc"
+  ],
+  "badges": [
+
+  ],
+  "markdown": "github",
+  "qna": "marketplace",
+  "icon": "bedrock_studio.500.png"
 }
