--- a/package.json
+++ b/package.json
@@ -128,5 +128,5 @@
   ],
   "markdown": "github",
   "qna": "marketplace",
-  "icon": "bedrock_studio.500.png"
+  "icon": "resources/bedrock_studio.512.png"
 }
