--- a/package.json
+++ b/package.json
@@ -1,132 +1,133 @@
 {
-  "name": "bedrock-studio",
-  "version": "1.0.1",
-  "description": "Tools for making Minecraft Bedrock Add-Ons in Visual Studio Code",
-  "keywords": [
-    "Minecraft",
-    "Bedrock",
-    "Add-on",
-    "Addon"
-  ],
-  "homepage": "https://github.com/tschrock/bedrock-studio",
-  "bugs": {
-    "url": "https://github.com/tschrock/bedrock-studio/issues"
-  },
-  "license": "MIT",
-  "author": {
-    "name": "CyberPon3",
-    "email": "cyber@code.horse"
-  },
-  "contributors": [
-    {
-      "name": "destruc7i0n",
-      "email": "destruc7i0n@thedestruc7i0n.ca"
-    }
-  ],
-  "main": "./out/extension.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tschrock/bedrock-studio"
-  },
-  "scripts": {
-    "vscode:prepublish": "yarn run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile",
-    "test": "node ./out/test/runTest.js"
-  },
-  "dependencies": {
-    "jsonc-parser": "^2.2.1"
-  },
-  "devDependencies": {
-    "@types/glob": "^7.1.1",
-    "@types/ini": "^1.3.30",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.0",
-    "glob": "^7.1.6",
-    "mocha": "^7.1.1",
-    "typescript": "^3.8.3",
-    "vscode": "^1.1.36",
-    "vscode-test": "^1.3.0"
-  },
-  "engines": {
-    "vscode": "^1.22.0"
-  },
-  "displayName": "Bedrock Studio",
-  "publisher": "tschrock",
-  "categories": [
-    "Programming Languages",
-    "Other"
-  ],
-  "galleryBanner": {
-    "color": "#2e2e2e",
-    "theme": "dark"
-  },
-  "preview": false,
-  "contributes": {
-    "jsonValidation": [
-      {
-        "fileMatch": "/manifest.json",
-        "url": "./schemas/manifest.json"
-      },
-      {
-        "fileMatch": "/animation_controllers/*.json",
-        "url": "./schemas/animation_controller.json"
-      },
-      {
-        "fileMatch": "/*.animation_controllers.json",
-        "url": "./schemas/animation_controller.json"
-      },
-      {
-        "fileMatch": "/render_controllers/*.json",
-        "url": "./schemas/render_controller.json"
-      },
-      {
-        "fileMatch": "/*.render_controllers.json",
-        "url": "./schemas/render_controller.json"
-      },
-      {
-        "fileMatch": "/mobs.json",
-        "url": "./schemas/geometry.json"
-      },
-      {
-        "fileMatch": "/*.geo.json",
-        "url": "./schemas/geometry.json"
-      },
-      {
-        "fileMatch": "/animations/*.json",
-        "url": "./schemas/animation.json"
-      },
-      {
-        "fileMatch": "/*.animation.json",
-        "url": "./schemas/animation.json"
-      },
-      {
-        "fileMatch": "/*.entity.json",
-        "url": "./schemas/actor_resource_definition.json"
-      },
-      {
-        "fileMatch": "/attachables/*.json",
-        "url": "./schemas/actor_resource_definition.json"
-      },
-      {
-        "fileMatch": "/items/*.json",
-        "url": "./schemas/item.json"
-      },
-      {
-        "fileMatch": "/*.material",
-        "url": "./schemas/materials.json"
-      }
-    ]
-  },
-  "activationEvents": [
-    "onLanguage:json",
-    "onLanguage:jsonc"
-  ],
-  "badges": [
-
-  ],
-  "markdown": "github",
-  "qna": "marketplace",
-  "icon": "resources/bedrock_studio.512.png"
+    "name": "bedrock-studio",
+    "version": "1.0.1",
+    "description": "Tools for making Minecraft Bedrock Add-Ons in Visual Studio Code",
+    "keywords": [
+        "Minecraft",
+        "Bedrock",
+        "Add-on",
+        "Addon"
+    ],
+    "homepage": "https://github.com/tschrock/bedrock-studio",
+    "bugs": {
+        "url": "https://github.com/tschrock/bedrock-studio/issues"
+    },
+    "license": "MIT",
+    "author": {
+        "name": "CyberPon3",
+        "email": "cyber@code.horse"
+    },
+    "contributors": [
+        {
+            "name": "destruc7i0n",
+            "email": "destruc7i0n@thedestruc7i0n.ca"
+        }
+    ],
+    "main": "./out/extension.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/tschrock/bedrock-studio"
+    },
+    "scripts": {
+        "vscode:prepublish": "yarn run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "pretest": "yarn run compile",
+        "test": "node ./out/test/runTest.js"
+    },
+    "dependencies": {
+        "jsonc-parser": "^2.2.1"
+    },
+    "devDependencies": {
+        "@types/glob": "^7.1.1",
+        "@types/ini": "^1.3.30",
+        "@types/mocha": "^7.0.2",
+        "@types/node": "^13.13.0",
+        "@typescript-eslint/eslint-plugin": "^2.28.0",
+        "@typescript-eslint/parser": "^2.28.0",
+        "eslint": "^6.8.0",
+        "glob": "^7.1.6",
+        "mocha": "^7.1.1",
+        "typescript": "^3.8.3",
+        "vscode": "^1.1.36",
+        "vscode-test": "^1.3.0"
+    },
+    "engines": {
+        "vscode": "^1.22.0"
+    },
+    "displayName": "Bedrock Studio",
+    "publisher": "tschrock",
+    "categories": [
+        "Programming Languages",
+        "Other"
+    ],
+    "galleryBanner": {
+        "color": "#2e2e2e",
+        "theme": "dark"
+    },
+    "preview": false,
+    "contributes": {
+        "jsonValidation": [
+            {
+                "fileMatch": "/manifest.json",
+                "url": "./schemas/manifest.json"
+            },
+            {
+                "fileMatch": "/animation_controllers/*.json",
+                "url": "./schemas/animation_controller.json"
+            },
+            {
+                "fileMatch": "/*.animation_controllers.json",
+                "url": "./schemas/animation_controller.json"
+            },
+            {
+                "fileMatch": "/render_controllers/*.json",
+                "url": "./schemas/render_controller.json"
+            },
+            {
+                "fileMatch": "/*.render_controllers.json",
+                "url": "./schemas/render_controller.json"
+            },
+            {
+                "fileMatch": "/mobs.json",
+                "url": "./schemas/geometry.json"
+            },
+            {
+                "fileMatch": "/*.geo.json",
+                "url": "./schemas/geometry.json"
+            },
+            {
+                "fileMatch": "/animations/*.json",
+                "url": "./schemas/animation.json"
+            },
+            {
+                "fileMatch": "/*.animation.json",
+                "url": "./schemas/animation.json"
+            },
+            {
+                "fileMatch": "/*.entity.json",
+                "url": "./schemas/actor_resource_definition.json"
+            },
+            {
+                "fileMatch": "/attachables/*.json",
+                "url": "./schemas/actor_resource_definition.json"
+            },
+            {
+                "fileMatch": "/items/*.json",
+                "url": "./schemas/item.json"
+            },
+            {
+                "fileMatch": "/*.material",
+                "url": "./schemas/materials.json"
+            }
+        ]
+    },
+    "activationEvents": [
+        "onLanguage:json",
+        "onLanguage:jsonc"
+    ],
+    "badges": [],
+    "markdown": "github",
+    "qna": "marketplace",
+    "icon": "resources/bedrock_studio.512.png"
 }
