--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "@typescript-eslint/ban-types": false
+        "@typescript-eslint/ban-types": "off",
+        "@typescript-eslint/no-use-before-define": "off"
     }
 }
