--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
         "url": "https://github.com/tschrock/bedrock-studio"
     },
     "scripts": {
-        "vscode:prepublish": "yarn run compile",
+        "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "pretest": "yarn run compile",
+        "pretest": "npm run compile",
         "test": "node ./out/test/runTest.js"
     },
     "dependencies": {
